# CosyVoice3_ONNX

./: .gitignore  LICENSE  PROJECT_SPECIFICATION.md  README.md  SPEC.md  config.json  notes.md  pyproject.toml  run.sh  run_server.py  task_plan.md  tts.sh
examples/: basic_usage.py  pyqt5_integration.py  server_example.py  streaming_demo.py  test_v1.py  test_v3_features.py  voice_cloning.py
examples/samples/: test_prompt.txt
scripts/: download_presets.py
src/cosyvoice_onnx/: __init__.py  api.py  audio_processor.py  audio_validator.py  config.py  engine.py  model_manager.py  server.py  streaming.py  types.py
src/cosyvoice_onnx/frontend/: __init__.py  language.py  normalizer.py  prosody.py
src/cosyvoice_onnx/utils/: __init__.py  logger.py  preset_downloader.py
tests/: test_api.py  test_quality.py  test_streaming.py
