[project]
name = "cosyvoice-onnx"
version = "0.2.0"
description = "CosyVoice3 ONNX - Simple CPU-based TTS with Voice Cloning"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "Apache-2.0"}
authors = [
    {name = "CosyVoice3 ONNX Contributors"}
]
keywords = ["tts", "text-to-speech", "voice-cloning", "onnx", "cosyvoice"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]

dependencies = [
    "onnxruntime>=1.17.0,<1.18.0",  # 1.17.x works with FP16 models, newer versions have issues
    "numpy>=1.24.0,<2.0",
    "soundfile>=0.12.1",
    "librosa>=0.10.0,<0.11",
    "transformers>=4.40.0",
    "scipy>=1.10.0",
    "huggingface_hub>=0.20.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
gpu = ["onnxruntime-gpu>=1.18.0"]
mp3 = ["pydub>=0.25.1"]
text = ["WeTextProcessing>=1.0.0"]  # Full text normalization
pyqt = ["PyQt5>=5.15.0"]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0",
    "ruff>=0.1.0",
]
all = [
    "cosyvoice-onnx[gpu,mp3,text,pyqt]",
]

[project.urls]
Homepage = "https://github.com/your-repo/cosyvoice3-onnx"
Documentation = "https://github.com/your-repo/cosyvoice3-onnx#readme"
Repository = "https://github.com/your-repo/cosyvoice3-onnx"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cosyvoice_onnx"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/examples",
    "/docs",
    "/README.md",
    "/LICENSE",
]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312"]

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I", "N"]
ignore = ["E501"]
